--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,57 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+
 body {
 	margin: 0px;
+	color: #333;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+	font-weight: 300;
 }
 
 canvas {
 	width: 100%;
 	height: 100%
+}
+
+#menu {
+	text-align: center;
+	background-color: rgba(255, 255, 255, 0.7);
+	border-radius: 25px;
+	padding: 10px;
+	width: 700px;
+	height: 500px;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: -250px;
+	left: 0;
+	width: 700px;
+}
+
+h2 {
+	font-size: 1.2em;
+}
+
+.button {
+	text-decoration: none;
+	background-color: #EEEEEE;
+	color: #333333;
+	padding: 2px 6px 2px 6px;
+}
+
+.button:hover {
+	background-color: #ccc;
+	color: #222;
+}
+
+a {
+	text-decoration: none;
+	color: #333333;
+}
+
+a:hover {
+	color: #ff0000;
 }
